test/Fail/NoSplitInterval.err
NoSplitInterval.agda:12,5-7: error: [SplitError]
Cannot split on argument of non-datatype I
when checking that the pattern i0 has type I
